wrapped fully connected

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ useful_dnn_stuff.py
 output
 classifyImage_pylearn2.py
 generateTrainValTestData.py
+/fully_connected/images
+/fully_connected/extract*
